# web3-telegram-bot

./: .gitignore  README.md  main.py  pyproject.toml  sheet.py
src/: company.py  datastore.py  factory.py  investor.py  utils.py
